# shader-edit

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
resources/: cairo.frag  dither.frag  unlit.frag  unlit.vert
src/: app.cpp  app.h  assets.cpp  assets.h  main.cpp  model.cpp  model.h  pipeline.cpp  pipeline.h  resource_manager.cpp  resource_manager.h  swap_chain.cpp  swap_chain.h  vulkan_device.cpp  vulkan_device.h  window.cpp  window.h
